# IAM-gateway

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.in  toggle-environment.ps1
config/: default.py  dev.py  local.py  prod.py  staging.py  testing.py
core/: __init__.py
core/auth/: __init__.py  auth_guard.py  generic_encoder_decoder.py
core/auth/jwt/: jwt_handler.py
core/auth/middlewares/: validation_token.py
core/common/: credentials_validator.py  error_codes.py  messages.py
core/services/validators/: emails.py  passwords.py  usernames.py
core/users/: __init__.py  forms.py  models.py  routes.py
server/config/: __init__.py  logs.py
server/config/core/users/: models.py
